add connection class

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     provided 'io.digdag:digdag-spi:' + digdagVersion
     provided 'io.digdag:digdag-standards:' + digdagVersion
     provided 'io.digdag:digdag-plugin-utils:' + digdagVersion  // this should be 'compile' once digdag 0.8.2 is released to a built-in repository
+
+    compileOnly "org.immutables:value:2.3.9:annotations"
+    testCompileOnly "org.immutables:value:2.3.9:annotations"
 }
 
 sourceSets {
